wxWindows 2.2 Change Log
========================

INCOMPATIBLE CHANGES
--------------------

wxMSW:

- wxListCtrl::Find() parameter meaning changed, see docs for details
  (starting item is now included in the search, use 0 to search from the
   beginning)

OTHER CHANGES
-------------

2.2.6
-----

All:

- bug in wxDocMDIParentFrame::OnMRUFile() fixed

wxMSW:

- wxChoice sizing bug introduced in 2.2.5 fixed (oops) and calculating of
  the size of initially empty wxChoice controls fixed as well
- jpeg library compilation fixed for newer versions of mingw32 and cygwin

2.2.5
-----

- fixed memory corruption/crash in wxStreamBuffer
- wxTree/ListCtrl position fix (Mike Oliver <oliver@math.ucla.edu>)
- Italian translations updated
- Windows 2000 toolbar colours problem fixed

2.2.4
-----

- chinese translations added
- wxTreeEvent::GetPoint() returns correct position for ITEM_XXX_CLICK events

2.2.3
-----

wxGTK:

- frames created with wxDefaultSize will have some reasonable default size and
  not be created with 0 size

2.2.2
-----

wxGTK:

- better (implicit) themes support

2.2.1
-----

wxBase:

- Fixed logic bug in wxDateTime::ParseDate.
- wxDB: replaced German variable names with English.
- wxDbGetConnection() did not check for the correct scrolling
  of cursors when re-using a cached database connection.
    
All (GUI):

- Corrected uninitialized variable in wxDocument constructor.
- DocView now finds more appropriate parent frame for dialogs.
- Filter index checked, then path to find correct doc template.
- Unicode compile fixes.
- Generic list control column sizing bug fixed.
- Corrected wxComboBox validation behaviour.
- Added EVT_UPDATE_UI_RANGE macro.
- Some DB sample problems corrected.
- wxGrid fixes.
- Fixed low resolution problem with wxPostScriptDC.

wxMSW:

- Removed delayed loading for winmm in VC++ makefile (problems
  reported); USE_GLCANVAS now a variable in makefile.vc.
- Comments added to setup.h.